--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dépendances (non utilisées dans ce projet statique)
+node_modules/
+package-lock.json
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build Next.js (non utilisé - projet HTML statique)
+.next/
+out/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# Fichiers système
 .DS_Store
-*.pem
+Thumbs.db
+*.log
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Éditeurs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Fichiers temporaires
+*.tmp
+*.temp
