--- a/package.json
+++ b/package.json
@@ -1,27 +1,9 @@
 {
   "name": "altea-group",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Site web statique Altea Group - HTML/CSS/JavaScript vanilla",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.0",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.542.0",
-    "next": "13.5.11",
-    "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.11",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "serve": "echo 'Pour servir le site, utilisez un serveur HTTP local (ex: python -m http.server 8000 ou npx serve)'"
   }
 }
